Support resetting and disabling the state store cache
- Cache reset may be performed via a new /state/reset endpoint
- Cache may be manually disabled by setting a DISABLE_STATE_CACHE envvar in the scheduler.

Other fixes:
- Updates CLIs to reflect current /state endpoints, while dropping per-service boilerplate.
- Fixes a state cache issue: underlying 'suppressed' property wasn't being displayed in property list, as it was being written as a side effect within CuratorStateStore. Fixed by refactoring out the side effect behavior.
